--- a/index.html
+++ b/index.html
@@ -1,73 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title data-i18n="title">MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar</title>
-  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias." />
-
-  <!-- SEO / OG / Twitter -->
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR" />
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en" />
-  <link rel="canonical" href="https://malcantara.adv.br/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="MA – Inteligência Jurídica" />
-  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
-  <meta property="og:url" content="https://malcantara.adv.br/" />
-  <meta property="og:image" content="https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg" />
-  <meta property="og:locale" content="pt_BR" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="MA – Inteligência Jurídica" />
-  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
-  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg" />
-
-  <!-- Performance -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" />
-  <link rel="preload" href="public/assets/Mauricio-Alcantara-Site.svg" as="image" />
-  <link rel="icon" href="public/assets/Mauricio-Alcantara-Site.svg" type="image/svg+xml" />
-
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- AOS -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-
-  <!-- GA4 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config','G-FNXCNKTCY5');
-  </script>
-
-  <!-- JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"LegalService",
-    "name":"MA – Inteligência Jurídica",
-    "url":"https://malcantara.adv.br/",
-    "logo":"https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg",
-    "image":"https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg",
-    "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
-    "telephone":"+55-38-98416-4737",
-    "email":"contato@malcantara.adv.br",
-    "address":{
-      "@type":"PostalAddress",
-      "streetAddress":"Rua Áustria, 61 – Ibituruna",
-      "addressLocality":"Montes Claros",
-      "addressRegion":"MG",
-      "postalCode":"39402-145",
-      "addressCountry":"BR"
-    },
-    "founder":{"@type":"Person","name":"Maurício Alcântara"}
-  }
-  </script>
-</head>
-<body class="bg-[#F8F5F0] text-[#0F172A] font-sans scroll-smooth">
-
 <!-- Botão WhatsApp -->
 <a href="https://wa.me/5538984164737" class="fixed bottom-5 right-5 z-50 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg transition">
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
@@ -77,116 +7,81 @@
 
 <!-- Header fixo -->
 <header class="fixed top-0 w-full z-40 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
-  <img src="public/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-12 w-auto" />
+  <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-8 md:h-10 w-auto max-w-[160px]" />
   <nav class="hidden md:flex gap-6 text-sm font-semibold">
     <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
     <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
     <a href="#missao" class="hover:text-[#C5A268]">Missão</a>
     <a href="#contato" class="hover:text-[#C5A268]">Contato</a>
+    <a href="/blog.html" class="hover:text-[#C5A268]">Blog</a>
     <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
   </nav>
 </header>
 
 <div class="pt-32">
-  <!-- Hero e outras seções existentes aqui -->
+  <!-- HERO -->
+  <section class="py-24 px-6 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white text-center" id="hero">
+    <div class="max-w-4xl mx-auto" data-aos="fade-up">
+      <h1 class="text-4xl md:text-5xl font-bold mb-6">Inteligência Jurídica com Propósito</h1>
+      <p class="text-xl max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+    </div>
+  </section>
+
+  <!-- SERVIÇOS -->
+  <section id="servicos" class="py-24 px-6 bg-white text-center" data-aos="fade-up">
+    <h2 class="text-3xl md:text-4xl font-bold mb-10 text-[#0C2A52]">Nossos Serviços</h2>
+    <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+      <div class="bg-[#F9F7F4] p-6 rounded-xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Contratos Empresariais</h3>
+        <p>Instrumentos sob medida para proteção jurídica e segurança nas relações comerciais.</p>
+      </div>
+      <div class="bg-[#F9F7F4] p-6 rounded-xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Planejamento Sucessório</h3>
+        <p>Estratégias para organização patrimonial e continuidade do legado familiar.</p>
+      </div>
+      <div class="bg-[#F9F7F4] p-6 rounded-xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Governança Familiar</h3>
+        <p>Protocolos e acordos que fortalecem a harmonia entre gerações e protegem o patrimônio.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- METODOLOGIA -->
+  <section id="metodologia" class="py-24 px-6 bg-white text-center" data-aos="fade-up">
+    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#0C2A52]">Nossa Metodologia</h2>
+    <p class="max-w-3xl mx-auto text-lg text-[#1E293B] leading-relaxed">
+      Aplicamos a lógica da <strong>Base Viva</strong>: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência.
+      Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.
+    </p>
+  </section>
+
+  <!-- MISSÃO -->
+  <section id="missao" class="py-24 px-6 bg-[#F9F7F4] text-center" data-aos="fade-up">
+    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#0C2A52]">Nossa Missão</h2>
+    <p class="max-w-3xl mx-auto text-lg text-[#1E293B] leading-relaxed">
+      A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica.
+      Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.
+    </p>
+  </section>
 </div>
 
-<!-- Missão -->
-<section id="missao" class="py-24 px-6 bg-[#F8F5F0] text-center" data-aos="fade-up">
-  <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#0C2A52]">Nossa Missão</h2>
-  <p class="max-w-3xl mx-auto text-lg text-[#1E293B] leading-relaxed">
-    A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica. Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.
-  </p>
-</section>
-
-<!-- Serviços em Cards -->
-<section id="servicos" class="py-24 px-6 bg-white">
-  <div class="text-center mb-12" data-aos="fade-up">
-    <h2 class="text-3xl md:text-4xl font-bold text-[#0C2A52]">Nossos Serviços</h2>
-  </div>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto" data-aos="fade-up">
-    <div class="bg-[#F8F5F0] rounded-lg p-6 shadow hover:shadow-xl transition">
-      <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Contratos Empresariais</h3>
-      <p class="text-sm text-[#334155]">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
-    </div>
-    <div class="bg-[#F8F5F0] rounded-lg p-6 shadow hover:shadow-xl transition">
-      <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Planejamento Sucessório</h3>
-      <p class="text-sm text-[#334155]">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
-    </div>
-    <div class="bg-[#F8F5F0] rounded-lg p-6 shadow hover:shadow-xl transition">
-      <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Governança Familiar</h3>
-      <p class="text-sm text-[#334155]">Estruturação de acordos, protocolos e governança intergeracional.</p>
-    </div>
-  </div>
-</section>
-
-<!-- Insights / Blog -->
-<section class="py-24 px-6 bg-[#F8F5F0]">
-  <div class="text-center mb-12" data-aos="fade-up">
-    <h2 class="text-3xl md:text-4xl font-bold text-[#0C2A52]">Insights</h2>
-  </div>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto" data-aos="fade-up">
-    <div class="bg-white rounded-lg p-6 shadow hover:shadow-lg transition">
-      <h3 class="font-semibold text-lg text-[#0C2A52] mb-2">O verdadeiro custo de uma holding mal feita</h3>
-      <p class="text-sm text-[#334155]">Quando economizar sai caro: riscos e impactos de estruturas mal planejadas.</p>
-      <a href="/blog/holding-mal-feita" class="text-[#C5A268] text-sm font-medium mt-2 inline-block">Ler mais →</a>
-    </div>
-    <div class="bg-white rounded-lg p-6 shadow hover:shadow-lg transition">
-      <h3 class="font-semibold text-lg text-[#0C2A52] mb-2">Blindagem ou verdade estratégica?</h3>
-      <p class="text-sm text-[#334155]">Como comunicar soluções jurídicas com ética e sofisticação.</p>
-      <a href="/blog/blindagem-ou-verdade" class="text-[#C5A268] text-sm font-medium mt-2 inline-block">Ler mais →</a>
-    </div>
-    <div class="bg-white rounded-lg p-6 shadow hover:shadow-lg transition">
-      <h3 class="font-semibold text-lg text-[#0C2A52] mb-2">Sucessão patrimonial na prática</h3>
-      <p class="text-sm text-[#334155]">Estratégias reais para preservar empresas familiares ao longo do tempo.</p>
-      <a href="/blog/sucessao-na-pratica" class="text-[#C5A268] text-sm font-medium mt-2 inline-block">Ler mais →</a>
-    </div>
-  </div>
-</section>
-
-<!-- Rodapé -->
+<!-- CONTATO / RODAPÉ -->
 <footer id="contato" class="bg-[#0C2A52] text-white py-12 px-6">
-  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
+  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-8">
     <div>
-      <h4 class="font-semibold text-lg mb-2">Endereço</h4>
-      <p>Rua Áustria, 61 – Ibituruna<br>Montes Claros/MG – 39402-145</p>
+      <h2 class="text-xl font-semibold mb-4">Contato</h2>
+      <p class="mb-1">Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
+      <p class="mb-1">contato@malcantara.adv.br</p>
+      <p class="mb-4">+55 38 98416-4737</p>
     </div>
-    <div>
-      <h4 class="font-semibold text-lg mb-2">Contato</h4>
-      <p>Email: contato@malcantara.adv.br<br>WhatsApp: (38) 98416-4737</p>
-    </div>
-    <div>
-      <h4 class="font-semibold text-lg mb-2">Navegação</h4>
-      <ul class="space-y-1 text-sm">
-        <li><a href="#servicos" class="hover:underline">Serviços</a></li>
-        <li><a href="#metodologia" class="hover:underline">Metodologia</a></li>
-        <li><a href="#missao" class="hover:underline">Missão</a></li>
-        <li><a href="#" class="hover:underline">Blog</a></li>
-      </ul>
-    </div>
+    <form action="https://formsubmit.co/contato@malcantara.adv.br" method="POST" class="grid gap-3">
+      <input type="text" name="name" placeholder="Seu nome" required class="p-3 rounded bg-white text-black" />
+      <input type="email" name="email" placeholder="Seu e-mail" required class="p-3 rounded bg-white text-black" />
+      <textarea name="message" placeholder="Sua mensagem" rows="3" class="p-3 rounded bg-white text-black"></textarea>
+      <button type="submit" class="bg-[#C5A268] hover:bg-[#b48c4f] text-white font-semibold py-2 px-6 rounded">Enviar</button>
+    </form>
+  </div>
+  <div class="text-center text-sm mt-8">
+    <p>© 2025 MA – Inteligência Jurídica. Todos os direitos reservados.</p>
   </div>
 </footer>
-
-<script>
-  function setLang(l){ localStorage.setItem('lang', l); location.reload(); }
-  window.addEventListener('DOMContentLoaded', async () => {
-    const lang = localStorage.getItem('lang') || 'pt';
-    document.documentElement.lang = lang;
-    try {
-      const tr = await fetch('./i18n/' + lang + '.json').then(r => r.json());
-      document.querySelectorAll('[data-i18n]').forEach(el => {
-        const k = el.dataset.i18n;
-        if (tr[k]) el.textContent = tr[k];
-      });
-      document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
-        const k = el.dataset.i18nPlaceholder;
-        if (tr[k]) el.placeholder = tr[k];
-      });
-    } catch(e) {
-      console.warn('i18n error', e);
-    }
-    AOS.init({ duration: 700, once: true });
-  });
-</script>
-</body>
-</html>
