--- a/index.html
+++ b/index.html
@@ -1,87 +1,109 @@
-<!-- Botão WhatsApp -->
-<a href="https://wa.me/5538984164737" class="fixed bottom-5 right-5 z-50 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg transition">
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16.24 10.47a6.5 6.5 0 11-9.19 0m0 0a6.5 6.5 0 009.19 0z" />
-  </svg>
-</a>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MA – Inteligência Jurídica</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      AOS.init({ duration: 700, once: true });
+    });
+  </script>
+</head>
+<body class="bg-[#F8F5F0] text-[#0C2A52]">
 
-<!-- Header fixo -->
-<header class="fixed top-0 w-full z-40 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
-  <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-8 md:h-10 w-auto max-w-[160px]" />
-  <nav class="hidden md:flex gap-6 text-sm font-semibold">
-    <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
-    <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
-    <a href="#missao" class="hover:text-[#C5A268]">Missão</a>
-    <a href="#contato" class="hover:text-[#C5A268]">Contato</a>
-    <a href="/blog.html" class="hover:text-[#C5A268]">Blog</a>
-    <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
-  </nav>
-</header>
+  <!-- Header -->
+  <header class="fixed top-0 w-full z-40 bg-white/90 backdrop-blur-md shadow px-6 py-4 flex items-center justify-between">
+    <a href="#">
+      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[160px]">
+    </a>
+    <nav class="hidden md:flex gap-6 text-sm font-semibold">
+      <a href="#servicos" class="hover:text-[#C5A268]">Serviços</a>
+      <a href="#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
+      <a href="#missao" class="hover:text-[#C5A268]">Missão</a>
+      <a href="#contato" class="hover:text-[#C5A268]">Contato</a>
+      <a href="/blog.html" class="hover:text-[#C5A268]">Blog</a>
+    </nav>
+  </header>
 
-<div class="pt-32">
-  <!-- HERO -->
-  <section class="py-24 px-6 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white text-center" id="hero">
-    <div class="max-w-4xl mx-auto" data-aos="fade-up">
-      <h1 class="text-4xl md:text-5xl font-bold mb-6">Inteligência Jurídica com Propósito</h1>
-      <p class="text-xl max-w-2xl mx-auto">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+  <!-- Hero -->
+  <section class="pt-32 pb-20 px-6 text-center bg-gradient-to-b from-[#0C2A52] to-[#0C2A52] text-white">
+    <h1 class="text-4xl md:text-5xl font-serif font-semibold leading-tight">Inteligência Jurídica com Propósito</h1>
+    <p class="mt-4 text-lg">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. <br> Teênia, sensibilidade e futuro.</p>
+  </section>
+
+  <!-- Serviços -->
+  <section id="servicos" class="py-16 px-6 bg-[#FDFBF7]">
+    <h2 class="text-3xl font-bold text-center mb-12">Nossos Serviços</h2>
+    <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
+      <div class="bg-white shadow rounded p-6 hover:shadow-md transition" data-aos="fade-up">
+        <h3 class="text-xl font-semibold mb-2">Contratos Empresariais</h3>
+        <p class="text-gray-700 text-sm">Instrumentos jurídicos sob medida para segurança e estratégia nos relacionamentos comerciais.</p>
+      </div>
+      <div class="bg-white shadow rounded p-6 hover:shadow-md transition" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="text-xl font-semibold mb-2">Planejamento Sucessório</h3>
+        <p class="text-gray-700 text-sm">Organização patrimonial e sucessão harmônica com foco em perenidade familiar.</p>
+      </div>
+      <div class="bg-white shadow rounded p-6 hover:shadow-md transition" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="text-xl font-semibold mb-2">Governança Familiar</h3>
+        <p class="text-gray-700 text-sm">Acordos, protocolos e governança intergeracional para proteger o legado familiar.</p>
+      </div>
     </div>
   </section>
 
-  <!-- SERVIÇOS -->
-  <section id="servicos" class="py-24 px-6 bg-white text-center" data-aos="fade-up">
-    <h2 class="text-3xl md:text-4xl font-bold mb-10 text-[#0C2A52]">Nossos Serviços</h2>
-    <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-      <div class="bg-[#F9F7F4] p-6 rounded-xl shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Contratos Empresariais</h3>
-        <p>Instrumentos sob medida para proteção jurídica e segurança nas relações comerciais.</p>
-      </div>
-      <div class="bg-[#F9F7F4] p-6 rounded-xl shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Planejamento Sucessório</h3>
-        <p>Estratégias para organização patrimonial e continuidade do legado familiar.</p>
-      </div>
-      <div class="bg-[#F9F7F4] p-6 rounded-xl shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#0C2A52] mb-2">Governança Familiar</h3>
-        <p>Protocolos e acordos que fortalecem a harmonia entre gerações e protegem o patrimônio.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- METODOLOGIA -->
-  <section id="metodologia" class="py-24 px-6 bg-white text-center" data-aos="fade-up">
-    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#0C2A52]">Nossa Metodologia</h2>
-    <p class="max-w-3xl mx-auto text-lg text-[#1E293B] leading-relaxed">
-      Aplicamos a lógica da <strong>Base Viva</strong>: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência.
+  <!-- Metodologia -->
+  <section id="metodologia" class="py-16 px-6 bg-[#FFFDFB]">
+    <h2 class="text-3xl font-bold text-center mb-6">Nossa Metodologia</h2>
+    <p class="text-center max-w-3xl mx-auto text-gray-800 text-lg leading-relaxed">
+      Aplicamos a lógica da Base Viva. Especialização, Autoridade, Oportunidade, Dignidade e Ambiência. <br>
       Cada entrega é guiada por propósito, estratégia e conexão real com os desafios das famílias empresárias.
     </p>
   </section>
 
-  <!-- MISSÃO -->
-  <section id="missao" class="py-24 px-6 bg-[#F9F7F4] text-center" data-aos="fade-up">
-    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-[#0C2A52]">Nossa Missão</h2>
-    <p class="max-w-3xl mx-auto text-lg text-[#1E293B] leading-relaxed">
-      A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica.
-      Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.
+  <!-- Missão -->
+  <section id="missao" class="py-16 px-6 bg-[#FDFBF7]">
+    <h2 class="text-3xl font-bold text-center mb-6">Nossa Missão</h2>
+    <p class="text-center max-w-3xl mx-auto text-gray-800 text-lg leading-relaxed">
+      A MA existe para transformar conhecimento jurídico em impacto real, por meio de estratégia, sensibilidade e técnica. Atuamos com propósito, ao lado de empresas e famílias empresárias, promovendo perenidade, ética e inteligência jurídica aplicada.
     </p>
   </section>
-</div>
 
-<!-- CONTATO / RODAPÉ -->
-<footer id="contato" class="bg-[#0C2A52] text-white py-12 px-6">
-  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-8">
-    <div>
-      <h2 class="text-xl font-semibold mb-4">Contato</h2>
-      <p class="mb-1">Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
-      <p class="mb-1">contato@malcantara.adv.br</p>
-      <p class="mb-4">+55 38 98416-4737</p>
+  <!-- Contato -->
+  <section id="contato" class="py-16 px-6 bg-[#0C2A52] text-white">
+    <div class="max-w-3xl mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-6">Entre em Contato</h2>
+      <form class="grid gap-4">
+        <input type="text" placeholder="Seu nome" class="p-3 rounded text-black">
+        <input type="email" placeholder="Seu e-mail" class="p-3 rounded text-black">
+        <textarea placeholder="Sua mensagem" rows="4" class="p-3 rounded text-black"></textarea>
+        <button class="bg-[#C5A268] text-white py-3 px-6 rounded hover:bg-[#b49252] transition">Enviar</button>
+      </form>
     </div>
-    <form action="https://formsubmit.co/contato@malcantara.adv.br" method="POST" class="grid gap-3">
-      <input type="text" name="name" placeholder="Seu nome" required class="p-3 rounded bg-white text-black" />
-      <input type="email" name="email" placeholder="Seu e-mail" required class="p-3 rounded bg-white text-black" />
-      <textarea name="message" placeholder="Sua mensagem" rows="3" class="p-3 rounded bg-white text-black"></textarea>
-      <button type="submit" class="bg-[#C5A268] hover:bg-[#b48c4f] text-white font-semibold py-2 px-6 rounded">Enviar</button>
-    </form>
-  </div>
-  <div class="text-center text-sm mt-8">
-    <p>© 2025 MA – Inteligência Jurídica. Todos os direitos reservados.</p>
-  </div>
-</footer>
+  </section>
+
+  <!-- Rodapé -->
+  <footer class="bg-[#0C2A52] text-white text-sm py-8 px-6">
+    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between gap-4">
+      <div>
+        <p>© 2025 MA – Inteligência Jurídica</p>
+        <p>Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
+        <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a> • +55 38 98416-4737</p>
+      </div>
+      <div>
+        <a href="#" class="underline">Voltar ao topo</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- WhatsApp flutuante -->
+  <a href="https://wa.me/5538984164737" target="_blank" class="fixed bottom-6 right-6 bg-[#25D366] p-4 rounded-full shadow-lg hover:scale-105 transition z-50">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" width="24" height="24">
+      <path d="M12.04 2.004a10 10 0 0 0-8.93 14.413L2 22l5.75-1.89a9.97 9.97 0 0 0 4.29 1.01h.01A10 10 0 1 0 12.04 2.004Zm5.82 14.19c-.24.68-1.37 1.27-1.87 1.3-.48.03-.99.05-1.6-.1-.37-.1-.84-.27-1.44-.53a11.27 11.27 0 0 1-4.18-3.74c-.56-.75-.99-1.66-1.13-2.28-.11-.48-.01-.9.12-1.24.13-.35.76-1.2 1.05-1.32.27-.1.64-.15 1.03.4.37.55 1.28 1.85 1.38 1.98.11.13.18.3.03.49-.14.2-.21.32-.41.51-.2.2-.43.43-.2.84.24.4 1.06 1.74 2.3 2.36.85.43 1.26.47 1.67.3.4-.17 1.07-.77 1.34-1.53.14-.4.29-.45.49-.45h.42c.24 0 .6.09.71.3.1.2.1 1.16-.2 1.87Z"/>
+    </svg>
+  </a>
+
+</body>
+</html>
